# xlntx

./: .gitignore  CMakeLists.txt  EffectInfo.cpp  EffectInfo.h  README.md  resource.rc  test_xlntx.cpp  third_party_effects_data_gen.cpp  third_party_effects_data_gen_vs.cpp
.claude/: settings.local.json
docs/: build-process-complete-guide.md
xlntx/: CMakeLists.txt
xlntx/include/xlntx/: xlntx.hpp  xlntx_config.hpp
xlntx/include/xlntx/cell/: cell.hpp  cell_reference.hpp  cell_type.hpp  comment.hpp  hyperlink.hpp  index_types.hpp  phonetic_run.hpp  rich_text.hpp  rich_text_run.hpp
xlntx/include/xlntx/drawing/: spreadsheet_drawing.hpp
xlntx/include/xlntx/packaging/: ext_list.hpp  manifest.hpp  relationship.hpp  uri.hpp
xlntx/include/xlntx/styles/: alignment.hpp  border.hpp  color.hpp  conditional_format.hpp  fill.hpp  font.hpp  format.hpp  number_format.hpp  protection.hpp  style.hpp
xlntx/include/xlntx/utils/: calendar.hpp  date.hpp  datetime.hpp  exceptions.hpp  optional.hpp  path.hpp  scoped_enum_hash.hpp  time.hpp  timedelta.hpp  variant.hpp
xlntx/include/xlntx/workbook/: calculation_properties.hpp  document_security.hpp  external_book.hpp  metadata_property.hpp  named_range.hpp  streaming_workbook_reader.hpp  streaming_workbook_writer.hpp  theme.hpp  workbook.hpp  workbook_view.hpp  worksheet_iterator.hpp
xlntx/include/xlntx/worksheet/: cell_iterator.hpp  cell_vector.hpp  column_properties.hpp  header_footer.hpp  major_order.hpp  page_margins.hpp  page_setup.hpp  pane.hpp  phonetic_pr.hpp  print_options.hpp  range.hpp  range_iterator.hpp  range_reference.hpp  row_properties.hpp  selection.hpp  sheet_format_properties.hpp  sheet_pr.hpp  sheet_protection.hpp  sheet_view.hpp  worksheet.hpp
xlntx/source/: cell.cpp  cell_reference.cpp  exceptions.cpp  index_types.cpp  path.cpp  range.cpp  range_reference.cpp  rich_text.cpp  workbook.cpp  worksheet.cpp
xlntx/source/detail/: cell_impl.hpp  workbook_impl.hpp  worksheet_impl.hpp  xlsx_reader.cpp  xlsx_reader.hpp  xml_parser.cpp  xml_parser.hpp  zip_reader.cpp  zip_reader.hpp
